Refine error handling and fix List.remove warning
- Updated various methods to use Java's logging system for error tracking, replacing printStackTrace and console prints with logger calls. Added user notifications for error scenarios to enhance the application's robustness and user experience.

- Refined removeObjectFromList method to ensure the object is not treated as an integer index, addressing the warning about a suspicious call to List.remove(). Added an instanceof check to prevent potential class casting issues.

- Changed Arrays.asList to List.of to prevent warning about it.